Dealt with all Magic Numbers